--- a/vue-fe/src/views/admin/admin-interview-management/admin-interview-page/interview-register/admin-interview-register.css
+++ b/vue-fe/src/views/admin/admin-interview-management/admin-interview-page/interview-register/admin-interview-register.css
@@ -40,3 +40,10 @@
   align-items: center;
   column-gap: 5px;
 }
+
+.interview-infor span {
+  font-size: 14px;
+  display: block;
+  padding: 3px 0;
+  box-sizing: border-box;
+}
